Fix small responsiveness

--- a/css/style.css
+++ b/css/style.css
@@ -299,4 +299,8 @@ footer {
     margin: 0px;
     color: #585858; }
 
+@media only screen and (max-width: 1366px) {
+  .intro {
+    height: 500px; } }
+
 /*# sourceMappingURL=style.css.map */
