--- a/css/style.scss
+++ b/css/style.scss
@@ -235,6 +235,13 @@ nav{
 	background-position: center;
 }
 
+.blog-bg{
+	background: url(../img/blog.jpeg);
+	background-size: cover;
+	margin:-15px;
+	background-position: center;
+}
+
 .about-word{
 	height: 600px;
 	display: flex;
