--- a/css/style.scss
+++ b/css/style.scss
@@ -303,6 +303,15 @@ nav{
 	}
 }
 
+.blog-area{
+	margin: 100px 0px;
+
+	.blog-extract{
+		font-weight: bold;
+		font-size: 22px;
+	}
+}
+
 .character{
 
 	float: right;
